<resources>
    <string name="app_name">ExpiryDateTracker</string>
    <string name="check_expired_items">Check Expired Items</string>
    <string name="scanned_items">Scanned Items</string>
    <string name="Scan_product">Scan a product</string>
    <string name="please_grant_permission">Please grant the permission to use the app</string>
    <string name="product_name">Product Name</string>
    <string name="product_barcode">Product barcode</string>
    <string name="add_product">Add Product</string>
    <string name="product_type">Product Type</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="save">Save</string>
    <string name="fill_fields">Please fill all fields</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="products">Products</string>
    <string name="expired_products">Expired Products</string>
</resources>