<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    android:label="@string/scanned_items"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.basemibrahim.expirydatetracker.ui.HomeFragment"
        android:label="HomeFragment" >
        <action
            android:id="@+id/action_homeFragment_to_scannerFragment"
            app:destination="@id/scannerFragment"
            app:launchSingleTop="false" />
    </fragment>
    <fragment
        android:id="@+id/scannerFragment"
        android:name="com.basemibrahim.expirydatetracker.ui.ScannerFragment"
        android:label="@string/Scan_product" >
        <action
            android:id="@+id/action_scannerFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment"
             />
    </fragment>
    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.basemibrahim.expirydatetracker.ui.ProductDetailsFragment"
        android:label="@string/add_product">
        <argument
            android:name="barcode"
            app:argType="string" />
        <action
            android:id="@+id/action_productDetailsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
</navigation>